install dependencies and run test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,4 +11,9 @@ jobs:
       - image: cimg/node:17.9.0
     steps:
       - checkout
-      - run: node --version
+      - run:
+        name: Install dependencies
+        command: yarn install
+      - run:
+        name: Run Tests
+        command: yarn run test
