--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       - checkout
       - run:
         name: Install dependencies
-        command: yarn install
+        command: npm install
       - run:
         name: Run Tests
-        command: yarn run test
+        command: npm run test
